--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.4.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  }
 }
