--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -31,5 +31,8 @@
     "insert-css": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
