--- a/packages/icons-taro-h5/package.json
+++ b/packages/icons-taro-h5/package.json
@@ -75,5 +75,8 @@
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
     "ts-node": "^10.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
