--- a/packages/icons-taro-mini-program/package.json
+++ b/packages/icons-taro-mini-program/package.json
@@ -74,5 +74,8 @@
     "iconfont-parser": "^1.0.0",
     "mkdirp": "^1.0.4",
     "ts-node": "^10.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
