--- a/packages/icons-react/package.json
+++ b/packages/icons-react/package.json
@@ -23,11 +23,12 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "babel-plugin-import": "^1.13.0",
-    "father": "^2.29.5",
+    "father": "2.29.11",
     "typescript": "^3.3.3"
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "father-build": "1.18.6",
     "insert-css": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
